<resources>
    <string name="app_name">AircraftWar</string>
    <string name="main_title">Aircraft War</string>
    <string name="main_subtitle">Select a difficulty level to begin the experiment.</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_normal">Normal</string>
    <string name="difficulty_hard">Hard</string>
    <string name="music_switch_label">Music</string>
    <string name="rank_title">排行榜</string>
    <string name="rank_empty">暂无排行榜数据</string>
    <string name="rank_delete">删除</string>
    <string name="rank_filter_all">全部</string>
    <string name="rank_filter_easy">Easy</string>
    <string name="rank_filter_normal">Normal</string>
    <string name="rank_filter_hard">Hard</string>
    <string name="rank_back_to_menu">返回难度选择</string>
    <string name="mode_offline">单机模式</string>
    <string name="mode_online">联机模式</string>
    <string name="mode_online_unavailable">联机模式暂未开放</string>
    <string name="mode_online_selected">已切换到联机模式，请点击难度开始连接</string>
    <string name="mode_offline_selected">已切换到单机模式</string>
    <string name="button_rank">排行榜</string>
    <string name="dialog_username_title">游戏结束</string>
    <string name="dialog_username_message">得分：%d\n请输入您的用户名：</string>
    <string name="dialog_username_hint">用户名</string>
    <string name="dialog_username_confirm">确认</string>
    <string name="dialog_username_default">无名玩家</string>
    <string name="online_dialog_title">联机连接配置</string>
    <string name="online_dialog_host_hint">服务器地址，例如 10.0.2.2</string>
    <string name="online_dialog_port_hint">端口，例如 9999</string>
    <string name="online_dialog_confirm">开始连接</string>
    <string name="online_dialog_invalid_port">端口格式不正确</string>
    <string name="online_status_connecting">正在连接服务器…</string>
    <string name="online_status_waiting">已连接，等待另一位玩家…</string>
    <string name="online_status_active">对战进行中</string>
    <string name="online_status_game_over_waiting">我方已坠毁，等待对手结束…</string>
    <string name="online_status_peer_left">对手已断开连接</string>
    <string name="online_status_match_full">当前房间已满</string>
    <string name="online_status_connection_failed">连接失败：%1$s</string>
    <string name="online_status_error">联机异常：%1$s</string>
    <string name="online_result_title">联机结算</string>
    <string name="online_result_message">你的得分：%1$d\n对手得分：%2$d</string>
    <string name="online_result_confirm">返回首页</string>
    <string name="online_label_opponent">OPPONENT</string>
    <string name="online_label_status">STATUS</string>
</resources>
